# fmtdxc

./: CMakeLists.txt  README.md
include/fmtdxc/: fmtdxc.hpp
source/: fmtdxc.cpp
tool/: dxcc2json.cpp  json2dxcc.cpp
